--- a/ls-web-local/package.json
+++ b/ls-web-local/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^2.0.0",
     "ts-loader": "^6.0.2",
