--- a/ls-web-local/package.json
+++ b/ls-web-local/package.json
@@ -23,7 +23,13 @@
   },
   "dependencies": {
     "@types/node": "^12.0.4",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "ace-builds": "^1.4.4",
+    "emotion": "^10.0.9",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-split-pane": "^0.1.87",
     "rxjs": "^6.5.2",
     "typescript": "^3.5.1"
   }
