--- a/ls-web-local/package.json
+++ b/ls-web-local/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "prebuild": "rimraf dist",
     "build": "webpack --mode production",
+    "postbuild": "rimraf ../presentation/assets/editor && mkdir -p ../presentation/assets/editor && cp -rf dist ../presentation/assets/editor",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^2.0.0",
+    "rimraf": "^2.6.3",
     "ts-loader": "^6.0.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
