--- a/ls-web-local/package.json
+++ b/ls-web-local/package.json
@@ -32,6 +32,7 @@
     "emotion": "^10.0.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-json-view": "^1.19.1",
     "react-split-pane": "^0.1.87",
     "rxjs": "^6.5.2",
     "typescript": "^3.5.1"
